<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="20dp"
        android:text="@string/formulaire"
        android:textColor="#EFFFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/nom"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/editTextnom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nom_hint"
        android:minHeight="48dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/mail"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/mail_hint"
        android:minHeight="48dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/phone"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/phone_hint"
        android:minHeight="48dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/adresse"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/editTextAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/adresse_hint"
        android:minHeight="48dp"
        android:paddingLeft="10dp"/>


    <TextView
        android:id="@+id/ville"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/ville"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/villes"
        android:minHeight="48dp"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/envoyer"
        android:minHeight="48dp"/>

</LinearLayout>
